tuning, realized the reasoning behind the object that was previously grid no longer exists, I need another object to use grid! Going to keep the grid I have in place, it's basically flex and it's working. Now, need to design new grid view that matched original plan for Desktop view. TODO.

--- a/style/index.css
+++ b/style/index.css
@@ -56,8 +56,9 @@ a {
 }
 
 .site_content {
-    max-width: 1080px;
+    max-width: 1600px;
     margin: 0 auto;
+    position: relative;
 }
 
 .purple_accent_square, .blue_accent_square {
@@ -163,7 +164,7 @@ a {
     .purple_accent_square, .blue_accent_square {
         display: block;
         position: absolute;
-        width: 60%;
+        width: 40%;
         height: 8rem;
     }
     .purple_accent_square {
@@ -181,6 +182,11 @@ a {
 
     .reveal_scroll {
         flex-direction: row;
+    }
+
+    .home_grid--about {
+        display: grid;
+        grid-template-columns: auto auto;
     }
 }
 
